# idevicecpp

./: .gitignore  CMakeLists.txt  build_unix.sh  build_windows.bat  msvc12_86_64_release.conan.pr
include/idevicecpp/: idevicecpp.h
src/: main.cpp
test/: CMakeLists.txt  loadtbb.cpp
