cmake_minimum_required(VERSION 3.0.0)
project(idevicecpp VERSION 0.0.0)

include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
conan_basic_setup()

find_package(OpenSSL REQUIRED)
if(OPENSSL_FOUND)
    add_definitions(-DHAVE_OPENSSL)
endif(OPENSSL_FOUND)

include(CTest)
enable_testing()

include(CheckIncludeFile)
include(CheckIncludeFileCXX)
include(CheckIncludeFiles)
include(ExternalProject)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
add_executable(idevicecpp src/main.cpp)
target_include_directories(idevicecpp PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/deps/libplist/include)
target_include_directories(idevicecpp PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/deps/libusbmuxd/include)
target_include_directories(idevicecpp PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/deps/libimobiledevice/include)
target_link_libraries(idevicecpp Plist)
target_link_libraries(idevicecpp UsbMuxd)
target_link_libraries(idevicecpp iMobileDevice)
target_link_libraries(idevicecpp ${CONAN_LIBS_OPENSSL})
if (UNIX)
    target_link_libraries(idevicecpp pthread)
else(UNIX)
    target_include_directories(idevicecpp PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/deps/dirent/include)
endif(UNIX)
add_subdirectory(include)
add_subdirectory(deps)
add_subdirectory(src)
add_subdirectory(test)
